--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -1,4 +1,4 @@
-/*! \mainpage DirectUI Reference Documentation
+/*! \mainpage MeeGo Touch Reference Documentation
 
 <table class="mainIndex" class="indextable" cellspacing="1" cellpadding="2" border="0" align="center" width="95%">
   <tr>
